--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -248,24 +248,83 @@ anova(m4,m5)
 summary(m4)
 summary(m5)
 
-m6 <- brms::brm(RT ~ Val_sh + (1|Subject), 
-                data = df1a.v.rt.m, 
-                family = shifted_lognormal())
-m7 <- brms::brm(RT ~ Val_sh + (1 + Val_sh|Subject), 
+### Bayesian LMM
+# without random items
+library(ggmcmc)
+library(mcmcplots) 
+m6 <- brms::brm(RT ~ Val_sh * Matchness, 
+                data = df1a.v.rt, 
+                family = shifted_lognormal(),
+                chains = 4, cores = 4, warmup = 1000, iter = 2000,
+                file = 'exp1a_null_log')
+
+# check convegence:
+m6_tranformed <- ggmcmc::ggs(m6) 
+
+ggplot2::ggplot(filter(m6_tranformed, Parameter %in% c("b_Intercept", "b_Val_shGood", "b_Val_shNeutral", "b_MatchnessMismatch", "b_Val_shGood:MatchnessMismatch", "b_Val_shNeutral:MatchnessMismatch", "sigma", "ndt"),
+              Iteration > 1000),
+       aes(x   = Iteration,
+           y   = value, 
+           col = as.factor(Chain)))+
+  geom_line() +
+  facet_grid(Parameter ~ . ,
+             scale  = 'free_y',
+             switch = 'y') +
+  labs(title = "Caterpillar Plots",
+       col   = "Chains")
+
+# obtain the disganosis
+modelposterior <- as.mcmc(m6) # with the as.mcmc() command we can use all the CODA package convergence statistics and plotting options
+gelman.diag(modelposterior[, 1:8])
+
+gelman.plot(modelposterior[, 1:8])
+
+#To obtain the Geweke diagnostic use:
+geweke.diag(modelposterior[, 1:5])
+
+# check posterior
+stanplot(m6, type = "hist")
+
+# To obtain information about autocorrelation the following syntax can be used:
+autocorr.diag(modelposterior[,1:8], lags = c(0, 1,2,3,4, 5, 10, 50))
+
+# 
+stanplot(m6, pars = 1:4, type = "dens")
+
+pp_check(m6)
+
+# with random intercept
+m7 <- brms::brm(RT ~ Val_sh + Matchness + Val_sh:Matchness + (1|Subject), 
+                data = df1a.v.rt, 
+                family = shifted_lognormal(),
+                chains = 4, cores = 4, warmup = 3000, iter = 5000,
+                file = 'exp1a_int_log')
+pp_check(m7)
+
+m7_tranformed <- ggmcmc::ggs(m7) 
+
+ggplot2::ggplot(filter(m7_tranformed, Parameter %in% c("b_Intercept", "b_Val_shGood", "b_Val_shNeutral", "b_MatchnessMismatch", "b_Val_shGood:MatchnessMismatch", "b_Val_shNeutral:MatchnessMismatch", "sigma", "ndt"),
+              Iteration > 1000),
+       aes(x   = Iteration,
+           y   = value, 
+           col = as.factor(Chain)))+
+  geom_line() +
+  facet_grid(Parameter ~ . ,
+             scale  = 'free_y',
+             switch = 'y') +
+  labs(title = "Caterpillar Plots",
+       col   = "Chains")
+
+# with random intercept and random slope
+m8 <- brms::brm(RT ~ Val_sh + Matchness + Val_sh:Matchness + (1 + Val_sh * Matchness|Subject), 
                 data = df1a.v.rt.m, 
                 family = shifted_lognormal(), 
                 chains = 4, cores = 4, warmup = 1000, iter = 2000,
-                file = 'm7_slog')
+                file = 'exp1a_inte_slop_log')
 
-plot(m6)
-pp_check(m6)
-
-summary(m6)
 
 marginal_effects(m6)  # Back-transformed parameter estimates
 marginal_effects(m6, method='predict')  # Same, but for responses
-
-
 
 #m7 <- brms::brm(formua = bf(RT ~ Val_sh + (1|Subject), ndt ~ Subject), df1a.v.rt.m, family = shifted_lognormal())
 summary(m7)
