--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -252,10 +252,42 @@ summary(m5)
 # without random items
 library(ggmcmc)
 library(mcmcplots) 
-m6 <- brms::brm(RT ~ Val_sh * Matchness, 
+
+df1a.v.rt$RT_sec <- df1a.v.rt$RT/1000
+df1a.v.rt$logRT_sec <- log(df1a.v.rt$RT_sec)
+
+
+# Define a weakly informed prior
+prior_null <- c(
+  set_prior('normal(-1, 0.5)', class = 'Intercept'),  # around exp(-1) = 0.36 secs, sd = exp(0.5) = 1.687
+  set_prior('normal(0.4, 0.3)', class = 'sigma'),     # SD of individual rts in log-units
+  set_prior('normal(0, 0.5)', class = 'b')#,           # around exp(-1) - exp(-1 + 0.5) = 0.2386 seconds effect in either direction
+#  set_prior('normal(0.3, 0.1)', class = 'sd')         # some variability between participants
+)
+
+# check prior
+prior_null_int <- exp(rnorm(n=1e5, mean=-1, sd=0.5))  # chosen intercept prior
+prior_null_sig <- exp(rnorm(n=1e5, mean=0.4, sd=0.3))      # chosen intercept prior
+prior_null_b <- exp(rnorm(n=1e5, mean=0, sd=0.5))          # chosen intercept prior
+
+HDI95_null_int <- unname(quantile(prior_null_int, c(.025, .975)))
+
+ggplot() + geom_density(aes(x = prior_null_int)) + xlim(-5, 5) + geom_vline(xintercept = HDI95_null_int[1]) +  geom_vline(xintercept = HDI95_null_int[2])
+
+HDI95_null_b <- unname(quantile(prior_null_b, c(.025, .975)))
+
+ggplot() + geom_density(aes(x = prior_null_b)) + xlim(-5, 5) + geom_vline(xintercept = HDI95_null_b[1]) +  geom_vline(xintercept = HDI95_null_b[2])
+
+
+get_prior(RT_sec ~ Val_sh * Matchness, 
+                data = df1a.v.rt, 
+                family = shifted_lognormal())
+
+m6 <- brms::brm(RT_sec ~ Val_sh * Matchness, 
                 data = df1a.v.rt, 
                 family = shifted_lognormal(),
                 chains = 4, cores = 4, warmup = 1000, iter = 2000,
+                prior = prior_null,
                 file = 'exp1a_null_log')
 
 # check convegence:
@@ -294,11 +326,31 @@ stanplot(m6, pars = 1:4, type = "dens")
 pp_check(m6)
 
 # with random intercept
-m7 <- brms::brm(RT ~ Val_sh + Matchness + Val_sh:Matchness + (1|Subject), 
+prior_int <- c(
+  set_prior('normal(-1, 0.5)', class = 'Intercept'),  # around exp(-1) = 0.36 secs
+  set_prior('normal(0.4, 0.3)', class = 'sigma'),     # SD of individual rts in log-units
+  set_prior('normal(0, 0.5)', class = 'b'),           # around exp(-1) - exp(-1 + 0.5) = 0.2386 seconds effect in either direction
+  set_prior('normal(0.3, 0.1)', class = 'sd')         # some variability between participants
+)
+
+m7 <- brms::brm(formula = bf(RT ~ Val_sh + Matchness + Val_sh:Matchness + (1|Subject), 
+                             ndt ~ Subject), 
                 data = df1a.v.rt, 
                 family = shifted_lognormal(),
                 chains = 4, cores = 4, warmup = 3000, iter = 5000,
+                prior = prior_int,
                 file = 'exp1a_int_log')
+
+#m7 <- brms::brm(RT ~ Val_sh + Matchness + Val_sh:Matchness + (1|Subject), 
+#                data = df1a.v.rt, 
+#                family = shifted_lognormal(),
+#                chains = 4, cores = 4, warmup = 3000, iter = 5000,
+#                prior = prior_int,
+#                file = 'exp1a_int_log')
+
+#formula = bf(rt ~ condition + (1|id), 
+#             ndt ~ id)
+
 pp_check(m7)
 
 m7_tranformed <- ggmcmc::ggs(m7) 
@@ -314,6 +366,12 @@ ggplot2::ggplot(filter(m7_tranformed, Parameter %in% c("b_Intercept", "b_Val_shG
              switch = 'y') +
   labs(title = "Caterpillar Plots",
        col   = "Chains")
+
+model_7_posterior <- as.mcmc(m7) # with the as.mcmc() command we can use all the CODA package convergence statistics and plotting options
+
+gelman.diag(model_7_posterior[, 1:8])  # the results is horrible!!
+gelman.plot(model_7_posterior[, 1:8])
+
 
 # with random intercept and random slope
 m8 <- brms::brm(RT ~ Val_sh + Matchness + Val_sh:Matchness + (1 + Val_sh * Matchness|Subject), 
@@ -350,6 +408,13 @@ def_sd_sim <- rstudent_t(1e5, 3, 0, 10)  # default sd prior
 HDI95_def_sd <- unname(quantile(def_sd_sim, c(.025, .975)))
 
 ggplot() + geom_density(aes(x = def_sd_sim)) + xlim(-80, 80) + geom_vline(xintercept = HDI95_def_sd[1]) +  geom_vline(xintercept = HDI95_def_sd[2])
+
+int_prior <- rnorm(n=1e5, mean=-1, sd=0.5)  # chosen intercept prior
+HDI95_int_prior <- unname(quantile(int_prior, c(.025, .975)))
+
+ggplot() + geom_density(aes(x = int_prior)) + xlim(-10, 10) + geom_vline(xintercept = HDI95_int_prior[1]) +  geom_vline(xintercept = HDI95_int_prior[2])
+
+
 
 loo(m6, m7)
 
